--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,14 @@ layout: archive
 
 {{ content }}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
-Olaolaolaolaolaola bom dia
-{% if paginator %}
+<!-- <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3> -->
+
+<section class="welcome-section">
+  <h1>Welcome to My Website</h1>
+  <p>This is my personal blog where I write about...</p>
+</section>
+
+<!-- {% if paginator %}
   {% assign posts = paginator.posts %}
 {% else %}
   {% assign posts = site.posts %}
@@ -17,6 +22,6 @@ Olaolaolaolaolaola bom dia
   {% for post in posts %}
     {% include archive-single.html type=entries_layout %}
   {% endfor %}
-</div>
+</div> -->
 
 {% include paginator.html %}
