--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: archive
 <!-- <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3> -->
 
 <section class="welcome-section">
-  <h1>Welcome to My Website</h1>
+  <h1>Welcome to our Website</h1>
   <p>This is my personal blog where I write about...</p>
 </section>
 
